--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </li>
         </ul>
         <button type="button" class="rounded-pill btn-rounded">
-          +1 728365413
+          <a href="http://www.wa.me/6281393363478" target="_blank" rel="noopener noreferrer">Whatsapp</a>
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
@@ -53,10 +53,9 @@
       <!-- START THE CONTENT FOR THE INTRO  -->
       <div class="col-md-6 intros text-start">
         <h1 class="display-2">
-          <span class="display-2--intro">Hey!, I'm Patrick</span>
+          <span class="display-2--intro">Hey!, I'm Maulana</span>
           <span class="display-2--description lh-base">
-            this is a multi-purpose responsive layout created with bootstrap v5. 
-            (here your can place your description text)
+            Junior Data Scientist with 2 years experience. 
           </span>
         </h1>
         <button type="button" class="rounded-pill btn-rounded">Get in Touch
