--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </li>
         </ul>
         <button type="button" class="rounded-pill btn-rounded">
-          <a href="http://www.wa.me/6281393363478" target="_blank" rel="noopener noreferrer">Whatsapp</a>
+          <a href="http://wa.me/6281393363478" target="_blank" rel="noopener noreferrer">Whatsapp</a>
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
@@ -77,14 +77,14 @@
       </div>
     </div>
   </div>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+  <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,160L48,176C96,192,192,224,288,208C384,192,480,128,576,133.3C672,139,768,213,864,202.7C960,192,1056,96,1152,74.7C1248,53,1344,107,1392,133.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg> -->
 </section>
 
 <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                              START SECTION 3 - THE CAMPANIES SECTION  
 ////////////////////////////////////////////////////////////////////////////////////////////////////-->
 
-  <section id="campanies" class="campanies">
+  <!-- <section id="campanies" class="campanies">
     <div class="container">
       <div class="row text-center">
         <h4 class="fw-bold lead mb-3">Trusted by campanies like</h4>
@@ -126,7 +126,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 <!-- //////////////////////////////////////////////////////////////////////////////////////////////
                          START SECTION 4 - THE SERVICES  
