--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </li>
         </ul>
         <button type="button" class="rounded-pill btn-rounded">
-          <a href="http://wa.me/6281393363478" target="_blank" rel="noopener noreferrer">Whatsapp</a>
+          <a href="http://wa.me/+6281393363478" target="_blank" rel="noopener noreferrer">Whatsapp</a>
           <span>
             <i class="fas fa-phone-alt"></i>
           </span>
