--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
         <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
         <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-        <a href="github.com/maulana-kavaldo" class="github"><i class="bx bxl-github"></i></a>
-        <a href="linkedin.com/in/maulana-kavaldo" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="wa.me/+6281393363478" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
+        <a href="linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
       </div>
     </div>
   </section><!-- End Hero -->
@@ -409,7 +409,7 @@
 
         <a href="github.com/maulana-kavaldo" target="_blank" class="github"><i class="bx bxl-github"></i></a>
         <a href="linkedin.com/in/maulana-kavaldo" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-        <a href="wa.me/+6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+        <a href="wa.me/6281393363478" target="_blank" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
       </div>
       <div class="copyright">
         &copy; Copyright <strong><span>MyResume</span></strong>. All Rights Reserved
