--- a/pages/project-churn-prediction.html
+++ b/pages/project-churn-prediction.html
@@ -91,19 +91,19 @@
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong> : Machine Learning, Bussines</li>
-                <!-- <li><strong>Client</strong>: ASU Company</li> -->
                 <li><strong>Project date</strong> : 01 October, 2022</li>
-                <li><strong>Project URL</strong> : <a href="#">Github</a></li>
+                <li>
+                  <strong>Project URL</strong> :
+                  <a href="https://github.com/maulanakavaldo/Data-Science"
+                    >Github</a
+                  >
+                </li>
               </ul>
               <br />
               <h3>Details</h3>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
-                itaque inventore commodi labore quia quia. Exercitationem
-                repudiandae officiis neque suscipit non officia eaque itaque
-                enim. Voluptatem officia accusantium nesciunt est omnis tempora
-                consectetur dignissimos. Sequi nulla at esse enim cum deserunt
-                eius.
+                Get insight from telecom dataset and prediction using 3 machine
+                learning algorithm to predic customers churn or not churn.
               </p>
             </div>
           </div>
