--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Maulana Kavaldo</h4>
-              <p><em>Junior data scientist with more than 2 years experience.
-                Able to analyze datasets, develop new models
-                and perform data management. Have analytical skills,
-                Strong attention to detail and able to work in a team.</em></p>
+              <p><em>Fresh graduate and junior data scientist with more than 2 years of 
+                learning experience. Able to analyze datasets, use machine learning models  
+                and perform time management. Have analytical skills, strong in detail and 
+                able to work in a team.</em></p>
               <!-- <ul>
                 <li>Portland par 127,Orlando, FL</li>
                 <li>(123) 456-7891</li>
