--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
           <div class="col-lg-12 d-flex justify-content-center" data-aos="fade-up" data-aos-delay="100">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <!-- <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-ml">ML</li>
+              <li data-filter=".filter-team">Team</li>
+              <!-- <li data-filter=".filter-ml">ML</li>
               <li data-filter=".filter-web">Web</li> -->
             </ul>
           </div>
@@ -336,7 +336,7 @@
             </div>
           </div>
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-data">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-team">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/thk/DS1 - COVID-19 Death Growth _ Healthcare Facilities.png" class="img-fluid" alt="">
               <div class="portfolio-info">
