--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>alkav.maulana@gmail.com.com</p>
+                <p><a href="mailto:alkav.maulana@gmail.com.com">alkav.maulana@gmail.com.com</a></p>
               </div>
 
               <div class="phone">
