--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <!-- <form action="forms/mail.php" method="post" role="form" class="php-email-form"></form> -->
+            <!-- <form action="forms/mail.php" method="post" role="form" class="php-email-form"> -->
             <form action="forms/mail.php" method="post" class="php-email-form">
               <div class="row">
                 <div class="col-md-6 form-group">
@@ -407,9 +407,9 @@
                 <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
               </div>
               <div class="my-3">
-                <!-- <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div> -->
+                <div class="loading">Loading</div>
+                <!-- <div class="error-message"></div> -->
+                <div class="sent-message">Your message has been sent. Thank you!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
