--- a/index.html
+++ b/index.html
@@ -137,6 +137,14 @@
           <div class="col-lg-6">
 
             <div class="progress">
+              <span class="skill">Data Studio 
+                <!-- <i class="val">75%</i> -->
+              </span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>    
+            <div class="progress">
               <span class="skill">Tableau 
                 <!-- <i class="val">75%</i> -->
               </span>
@@ -236,7 +244,8 @@
           <div class="col-lg-4">
             <h3 class="resume-title">Licenses & Certifications</h3>
             <div class="resume-item">
-              <a href="assets/img/certif_licen/fga_ds.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>FGA: Data Science</h4></a>
+              <a href="assets/img/certif_licen/fga_ds1.png" data-gallery="portfolioGallery" class="portfolio-lightbox" ><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
+              <a href="assets/img/certif_licen/fga_ds2.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
               <h5>October 2022</h5>
               <p><em>Digital Talent Scholarship</em></p>
               <!-- <ul>
@@ -248,7 +257,7 @@
             </div>
 
             <div class="resume-item">
-              <a href="assets/img/certif_licen/xlfl.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>XL Axiata Future LEaders</h4></a>
+              <a href="assets/img/certif_licen/xlfl.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>XL Axiata Future LEaders <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <h5>Januari 2021</h5>
               <p><em>Future Skills Fisipol Universitas Gadjah Mada</em></p>
               <!-- <ul>
@@ -260,9 +269,12 @@
             </div>
 
             <div class="resume-item">
-              <a href="assets/img/certif_licen/dqlab.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>Data science with R, MySQL, Python</h4></a>
+              <a href="assets/img/certif_licen/certificate-DQLABACWP1AVSOWA.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>Data science with Python, MySQL, R<span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
+              <a href="assets/img/certif_licen/certificate-DQLABAPL2 FQDTSM.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
+              <a href="assets/img/certif_licen/certificate-DQLABDSCS1ORNOPC.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
+              <a href="assets/img/certif_licen/certificate-DQLABINTP1JSJQSA.png" data-gallery="portfolioGallery" class="portfolio-lightbox"></a>
               <h5>Januari 2020</h5>
-              <p><em>DQLab - Online Course</em></p>
+              <p><em>DQLab - Course</em></p>
               <!-- <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
@@ -272,7 +284,7 @@
             </div>
 
             <div class="resume-item">
-              <a href="assets/img/certif_licen/mos_2013.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>Microsoft Office Specialist</h4></a>
+              <a href="assets/img/certif_licen/mos_2013.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><h4>Microsoft Office Specialist <span>&nbsp;</span><span class="bx bx-link"></span></h4></a>
               <h5>April 2019</h5>
               <p><em>MOS: Microsoft Office Word 2013</em></p>
               <!-- <ul>
@@ -325,7 +337,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/churn-prediction.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/churn-prediction/churn-prediction.png" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Churn Prediction</h4>
                 <!-- <p>Web</p> -->
@@ -338,7 +350,7 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-team">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/thk/DS1 - COVID-19 Death Growth _ Healthcare Facilities.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/thk/DS1 - COVID-19 Death Growth _ Healthcare Facilities.png" class="img-fluid" alt=""">
               <div class="portfolio-info">
                 <h4>COVID-19</h4>
                 <!-- <p>Web</p> -->
