--- a/pages/project-churn-prediction.html
+++ b/pages/project-churn-prediction.html
@@ -61,26 +61,113 @@
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <!-- <img src="assets/img/portfolio/fpbach-1.jpg" alt="" /> -->
                   <img
-                    src="../assets/img/portfolio/churn-prediction.png"
+                    src="../assets/img/portfolio/churn-prediction/Slide1.png"
                     alt="churn prediction"
                   />
                 </div>
-
-                <!-- <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-2.jpg"
-                      alt=""
-                    />
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-3.jpg"
-                      alt=""
-                    />
-                  </div> -->
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide2.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide3.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide4.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide5.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide6.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide7.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide8.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide9.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide10.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide11.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide12.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide13.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide14.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide15.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide16.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide17.png"
+                    alt="churn prediction"
+                  />
+                </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/churn-prediction/Slide18.png"
+                    alt="churn prediction"
+                  />
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
