--- a/index.html
+++ b/index.html
@@ -419,7 +419,8 @@
                   <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
                 <br>
-                <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div>
+                <!-- <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div> -->
+                <div class="text-center"><button type="submit">Send Message</button></div>
               </form>
 
           </div>
