--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             <!-- <form action="forms/mail.php" method="post" role="form" class="php-email-form"> -->
-              <form action="forms/mail.php" method="post">
+              <form action="forms/mail.php" method="get">
                 <div class="row">
                   <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
