--- a/index.html
+++ b/index.html
@@ -403,24 +403,24 @@
           <div class="col-lg-8 mt-5 mt-lg-0">
 
             <!-- <form action="forms/mail.php" method="post" role="form" class="php-email-form"> -->
-              <form action="forms/mail.php" method="get">
+              <form action="https://formspree.io/f/xqkjvepr" method="post">
                 <div class="row">
-                  <div class="col-md-6 form-group">
+                  <!-- <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                  </div>
+                  </div> -->
                   <div class="col-md-6 form-group mt-3 mt-md-0">
                     <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
                   </div>
                 </div>
-                <div class="form-group mt-3">
+                <!-- <div class="form-group mt-3">
                   <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-                </div>
+                </div> -->
                 <div class="form-group mt-3">
                   <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
                 <br>
-                <!-- <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div> -->
-                <div class="text-center"><button type="submit">Send Message</button></div>
+                <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div>
+                <!-- <div class="text-center"><button type="submit">Send Message</button></div> -->
               </form>
 
           </div>
