--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
+  <!-- ReChapta -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -418,6 +420,7 @@
                 <div class="form-group mt-3">
                   <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
+                <div class="g-recaptcha" data-sitekey="6LemyEQjAAAAAA8aIZc1ny4GdTAqjFSleHlkotFs"></div>
                 <br>
                 <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div>
                 <!-- <div class="text-center"><button type="submit">Send Message</button></div> -->
