--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
                   <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
                 <br>
-                <div class="g-recaptcha" data-sitekey="6LeW20QjAAAAAErWy-YHigEpnA778lyB2lqY7fgm"></div>
+                <!-- <div class="g-recaptcha" data-sitekey="6LeW20QjAAAAAErWy-YHigEpnA778lyB2lqY7fgm"></div> -->
                 <br>
                 <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div>
               </form>
