--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
 
 <body>
 
+  
+
   <!-- ======= Mobile nav toggle button ======= -->
   <!-- <button type="button" class="mobile-nav-toggle d-xl-none"><i class="bi bi-list mobile-nav-toggle"></i></button> -->
   <i class="bi bi-list mobile-nav-toggle d-lg-none"></i>
@@ -62,6 +64,7 @@
   <div class="section-title">
     <span class="text-danger">"This Website Under Maintenance"</span>
   </div>
+
     <section id="hero" class="d-flex flex-column justify-content-center">
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Maulana Kavaldo</h1>
@@ -339,12 +342,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-ml">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/churn-prediction/churn-prediction.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/churn-prediction/churn-prediction.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Churn Prediction</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
-                  <a href="pages/project-churn-prediction.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-churn-prediction.php" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -352,12 +355,12 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-team">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/thk/DS1 - COVID-19 Death Growth _ Healthcare Facilities.png" class="img-fluid" alt=""">
+              <img src="assets/img/portfolio/thk/DS1 - COVID-19 Death Growth _ Healthcare Facilities.jpg" class="img-fluid" alt=""">
               <div class="portfolio-info">
                 <h4>COVID-19</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
-                  <a href="pages/project-thk.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-thk.php" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
