--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <!-- ReChapta -->
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -412,7 +413,11 @@
                   <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
                 <br>
-                <div class="g-recaptcha" data-sitekey="6LeW20QjAAAAAErWy-YHigEpnA778lyB2lqY7fgm"></div>
+                <!-- portfolio -->
+                <!-- <div class="g-recaptcha" data-sitekey="6LeW20QjAAAAAErWy-YHigEpnA778lyB2lqY7fgm"></div> -->      
+                          <!-- git1  -->
+                <div class="g-recaptcha" data-sitekey="6LdOWkYjAAAAANLK2A8kK6Ph8RTWGril1hCAxy0g"></div>
+                
                 <br>
                 <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div>
               </form>
