--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                   <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
                 </div>
                 <br>
-                <div class="g-recaptcha" data-sitekey="6LdOWkYjAAAAANLK2A8kK6Ph8RTWGril1hCAxy0g"></div>
+                <!-- <div class="g-recaptcha" data-sitekey="6LdOWkYjAAAAANLK2A8kK6Ph8RTWGril1hCAxy0g"></div> -->
                 <br>
                 <div class="text-center"><button type="submit" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off">Send Message</button></div>
               </form>
