--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                 <h4>Churn Prediction</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
-                  <a href="pages/project-churn-prediction.php" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-churn-prediction.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -361,7 +361,7 @@
                 <h4>COVID-19</h4>
                 <!-- <p>Web</p> -->
                 <div class="portfolio-links">
-                  <a href="pages/project-thk.php" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                  <a href="pages/project-thk.html" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
