--- a/index.html
+++ b/index.html
@@ -62,11 +62,15 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <div class="section-title">
+  <!-- <div class="section-title">
     <span class="text-danger">"This Website Under Maintenance"</span>
-  </div>
-
-    <section id="hero" class="d-flex flex-column justify-content-center">
+    <marquee scrolldelay="50">Contact me if the website does not run well.</marquee>
+  </div> -->
+  <marquee scrolldelay="10">Contact me if the website doesn't run well, please! Thank you.</marquee>
+  <!-- <marquee behavior="alternate" onmouseover="this.stop()" onmouseout="this.start()" direction="right">Ini Tulisan Berjalan</marquee> -->
+    
+  <section id="hero" class="d-flex flex-column justify-content-center">
+      
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Maulana Kavaldo</h1>
       <p>I'm <span class="typed" data-typed-items="Fresh Graduate, Junior Data Scientist, Data Engineer, Machine Learning Entusiast"></span></p>
