--- a/index01.html
+++ b/index01.html
@@ -221,10 +221,23 @@
 
           <div class="col-lg-4">
             <h3 class="resume-title">Experience</h3>
+
+            <div class="resume-item">
+              <h4>Data Scirntist</h4>
+              <h5>Desember - Present</h5>
+              <p><em>British Airways -Virtual Internship</em></p>
+              <!-- <ul>
+                <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
+                <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
+                <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
+                <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              </ul> -->
+            </div>
+
             <div class="resume-item">
               <h4>Data Engineer</h4>
               <h5>October 2022 (1 Month)</h5>
-              <p><em>BTPN Syariah - Internship</em></p>
+              <p><em>BTPN Syariah -aInternship</em></p>
               <!-- <ul>
                 <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
                 <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
@@ -235,7 +248,7 @@
             <div class="resume-item">
               <h4>Big Data Analytics</h4>
               <h5>September 2022 (1 Month)</h5>
-              <p><em>Kimia Farma - Internship</em></p>
+              <p><em>Kimia Farma -  Virtual Internship</em></p>
               <!-- <ul>
                 <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
                 <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
