--- a/pages/final-project-bach.html
+++ b/pages/final-project-bach.html
@@ -54,53 +54,94 @@
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
         <div class="container">
-          <div class="col-lg-12">
+          <div class="col-lg-11">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <div class="swiper-slide">
-                  <!-- <img src="assets/img/portfolio/fpbach-1.jpg" alt="" /> -->
-                  <img
-                    src="../assets/img/portfolio/portfolio-details-2.jpg"
-                    alt=""
-                  />
+                  <img src="../assets/img/portfolio/spr/Slide1.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide2.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide3.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide4.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide5.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide6.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide7.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide8.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide9.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide10.png" alt="" />
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="../assets/img/portfolio/spr/Slide11.png" alt="" />
                 </div>
 
                 <!-- <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-2.jpg"
-                      alt=""
-                    />
-                  </div>
-
-                  <div class="swiper-slide">
-                    <img
-                      src="assets/img/portfolio/portfolio-details-3.jpg"
-                      alt=""
-                    />
-                  </div> -->
+                  <img src="../assets/img/portfolio/spr/Slide12.png" alt="" />
+                </div> -->
               </div>
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-12">
+          <div class="col-lg-11">
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
                 <li><strong>Category</strong> : System Recommendation</li>
                 <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                <li><strong>Project date</strong> : 01 March, 2022</li>
+                <li><strong>Project date</strong> : 01 March - July 2022</li>
                 <li><strong>Project URL</strong> : <a href="#">Github</a></li>
               </ul>
               <br />
               <h3>Details</h3>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos
-                itaque inventore commodi labore quia quia. Exercitationem
-                repudiandae officiis neque suscipit non officia eaque itaque
-                enim. Voluptatem officia accusantium nesciunt est omnis tempora
-                consectetur dignissimos. Sequi nulla at esse enim cum deserunt
-                eius.
+                The choice of study program is one of the obstacles for students
+                who want to continue their studies in college. Many prospective
+                students are confused about choosing the right study program.
+                Factors that cause this include parental desires, personal
+                abilities, ideals, job prospects, and others. This problem
+                prompted the creation of a recommendation system for determining
+                study programs. In designing this system, it uses the waterfall
+                method as a system development method and the Analytical
+                Hierarchy Process (AHP) method as a method to determine
+                recommendations. The five basic criteria used are job prospects,
+                capacity, number of applicants, scholarship quotas, and
+                accreditation of each study program the data used is 2022 data
+                and interest criteria from the prospective student side. The
+                recommendation system for determining this study program was
+                created using a Codeigniter framework, PHP programming language,
+                and MySQL database. The results of this research can create a
+                recommendation system for determining website-based study
+                programs and or provide solutions in the form of recommendations
+                for prospective students on their interests and talents to
+                continue their studies in higher education by paying attention
+                to aspects of the study program criteria.
               </p>
             </div>
           </div>
