--- a/pages/project-churn-prediction.html
+++ b/pages/project-churn-prediction.html
@@ -61,7 +61,7 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
       <!-- ======= Portfolio Details Section ======= -->
       <section id="portfolio-details" class="portfolio-details">
         <div class="container">
-          <div class="col-lg-10">
+          <div class="col-lg-11">
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
                 <!-- <?php
@@ -202,7 +202,7 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
             </div>
           </div>
 
-          <div class="col-lg-10">
+          <div class="col-lg-11">
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
@@ -218,8 +218,31 @@ $a = count(glob("../assets/img/portfolio/churn-prediction/*.png", GLOB_BRACE));
               <br />
               <h3>Details</h3>
               <p>
-                Get insight from telecom dataset and prediction using 3 machine
-                learning algorithm to predic customers churn or not churn.
+                The project "Telecom Churn Prediction" is a project aimed at
+                predicting the churn (outgoing) rate of subscribers in the
+                telecommunications industry. The goal of the project is to help
+                telecommunications companies identify customers who are most
+                likely to abandon their services, so that companies can take
+                preventive measures to reduce churn rates.
+              </p>
+
+              <p>
+                To achieve these goals, the project will collect and analyze
+                customer data, including demographic information, service usage
+                data, and transaction data. Then, data analysis techniques such
+                as machine learning will be used to build accurate churn
+                prediction models. The prediction using 3 machine learning
+                algorithm to predic customers churn or not churn.
+              </p>
+
+              <p>
+                The results of this project are expected to provide
+                telecommunications companies with insight into the factors
+                influencing customer churn rates, so that companies can take
+                appropriate action to reduce churn and retain existing
+                customers. The project is also expected to improve the company's
+                efficiency by helping to allocate resources more effectively to
+                customers who are more likely to stay with the company.
               </p>
             </div>
           </div>
