--- a/pages/project-thk.html
+++ b/pages/project-thk.html
@@ -1,50 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+    <title>Churn Prediction</title>
+    <meta content="" name="description" />
+    <meta content="" name="keywords" />
 
-  <title>Churn Prediction</title>
-  <meta content="" name="description" />
-  <meta content="" name="keywords" />
+    <!-- Favicons -->
+    <link href="../assets/img/favicon.png" rel="icon" />
+    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
-  <!-- Favicons -->
-  <link href="../assets/img/favicon.png" rel="icon" />
-  <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet" />
+    <!-- Vendor CSS Files -->
+    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link
+      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/boxicons/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/glightbox/css/glightbox.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
 
-  <!-- Vendor CSS Files -->
-  <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet" />
-  <link href="../assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet" />
-  <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
+    <!-- Template Main CSS File -->
+    <link href="../assets/css/style.css" rel="stylesheet" />
 
-  <!-- Template Main CSS File -->
-  <link href="../assets/css/style.css" rel="stylesheet" />
-
-  <!-- =======================================================
+    <!-- =======================================================
   * Template Name: MyResume - v4.9.2
   * Template URL: https://bootstrapmade.com/free-html-bootstrap-template-my-resume/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-</head>
+  </head>
 
-<body>
-  <main id="main">
-    <!-- ======= Portfolio Details Section ======= -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-        <div class="col-lg-10">
-          <div class="portfolio-details-slider swiper">
-            <div class="swiper-wrapper align-items-center">
-
-              <!-- <?php
+  <body>
+    <main id="main">
+      <!-- ======= Portfolio Details Section ======= -->
+      <section id="portfolio-details" class="portfolio-details">
+        <div class="container">
+          <div class="col-lg-11">
+            <div class="portfolio-details-slider swiper">
+              <div class="swiper-wrapper align-items-center">
+                <!-- <?php
               $a = count(glob("../assets/img/portfolio/thk/*.png", GLOB_BRACE));
 
               for ($x = 1; $x <= $a; $x++) {
@@ -55,71 +71,116 @@
 
               ?> -->
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide1.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide1.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide2.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide2.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide3.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide3.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide4.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide4.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide5.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide5.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide6.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide6.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide7.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide7.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide8.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide8.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide9.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide9.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide10.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide10.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide11.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide11.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide12.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide12.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide13.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide13.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide14.png" alt="Tri Hita Karana Future Knowledge" />
-              </div>
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide14.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
 
-              <div class="swiper-slide">
-                <img src="../assets/img/portfolio/thk/Slide15.png" alt="Tri Hita Karana Future Knowledge" />
+                <div class="swiper-slide">
+                  <img
+                    src="../assets/img/portfolio/thk/Slide15.png"
+                    alt="Tri Hita Karana Future Knowledge"
+                  />
+                </div>
               </div>
-
               <div class="swiper-pagination"></div>
             </div>
           </div>
 
-          <div class="col-lg-10">
+          <div class="col-lg-11">
             <div class="portfolio-info">
               <h3>Project Information</h3>
               <ul>
@@ -130,41 +191,79 @@
                 <li><strong>Project date</strong> : October-November 2022</li>
                 <li>
                   <strong>Project URL</strong> :
-                  <a href="https://github.com/maulanakavaldo/THK_Project">Github</a>
+                  <a href="https://github.com/maulanakavaldo/THK_Project"
+                    >Github</a
+                  >
                 </li>
               </ul>
               <br />
               <h3>Details</h3>
-              <p>
+              <!-- <p>
                 This project was made in the context of Tri Hita Karana in Bali
                 and aims to find out the correlation between COVID-19 metrics,
                 in this case death growth with the number of public healthcare
                 facilities in 34 provinces all over Indonesia.
+              </p> -->
+              <p>
+                COVID-19 outbreak has become a global pandemic as declared by
+                WHO in March 2020. Almost 3 years after the first suspect of
+                COVID-19 found in Indonesia, COVID-19 has affected every sector
+                in every country and left sadness to society. On the other hand,
+                this pandemic also left lessons and reflections, including in
+                the public health sector. One of the most important variables of
+                public health is the number of public healthcare facilities.
+              </p>
+
+              <p>
+                This project aims to find out the correlation between COVID-19
+                metrics, in this case, death growth, with the number of public
+                healthcare facilities in 34 provinces all over Indonesia. We
+                used several datasets which were collected from several reliable
+                sources. This project used correlation and hypothesis testing to
+                find the correlation between target variables.
+              </p>
+
+              <p>
+                The result of this project shows that in 2020, there is a strong
+                positive correlation between COVID-19 death growth with the
+                number of public healthcare facilities in 34 provinces. It means
+                the higher death growth occurs in the provinces that have a
+                higher number of healthcare facilities, and vice versa. But, it
+                does not mean death growth is affected by the number of
+                healthcare facilities, because the relation between both
+                variables is not causality. The result in 2021 shows there is a
+                moderate negative correlation, it means the higher death growth
+                occurs in the provinces that have lower number of healthcare
+                facilities, and vice versa. In 2022, there is no correlation
+                between both variables.
               </p>
             </div>
           </div>
         </div>
-    </section>
-    <!-- End Portfolio Details Section -->
-  </main>
-  <!-- End #main -->
+      </section>
+      <!-- End Portfolio Details Section -->
+    </main>
+    <!-- End #main -->
 
-  <div id="preloader"></div>
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+    <div id="preloader"></div>
+    <a
+      href="#"
+      class="back-to-top d-flex align-items-center justify-content-center"
+      ><i class="bi bi-arrow-up-short"></i
+    ></a>
 
-  <!-- Vendor JS Files -->
-  <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-  <script src="../assets/vendor/aos/aos.js"></script>
-  <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="../assets/vendor/typed.js/typed.min.js"></script>
-  <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="../assets/vendor/php-email-form/validate.js"></script>
+    <!-- Vendor JS Files -->
+    <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../assets/vendor/aos/aos.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../assets/vendor/typed.js/typed.min.js"></script>
+    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="../assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="../assets/js/main.js"></script>
-</body>
-
+    <!-- Template Main JS File -->
+    <script src="../assets/js/main.js"></script>
+  </body>
 </html>
